--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,7 +43,9 @@ $colors: (
   pallete-yellow:#ffff01,
   pallete-green:#06dc40,
   pallete-blue:#00b8ff,
-  pallete-black:#2c2c2c
+  pallete-black:#2c2c2c,
+  pallete-blueold: #617be3,
+  pallete-redold: #550a46
 );
 
 $refresher-icon-color	:#ffd705;
